# hi2821_sdk

./: .gitignore  CMakeLists.txt  README.md  README.zh.md  build.py  config.in  sdk.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
analyzerJson/cfg/: funcptr.txt
application/: CMakeLists.txt  Kconfig
application/blinky/: CMakeLists.txt  blinky_cmsis.c
application/bs21/: CMakeLists.txt
application/demo/: CMakeLists.txt  demo.c  demo.h
application/samples/: CMakeLists.txt  Kconfig
drivers/chips/: CMakeLists.txt
drivers/chips/bs21/: CMakeLists.txt
drivers/chips/bs21/board/board_config/: boards.h
drivers/chips/bs21/board/linker/: CMakeLists.txt
drivers/chips/bs21/board/linker/standard/: linker.prelds  memory_config.h  usb.lds
drivers/chips/bs21/board/memory_config/include/: memory_config_common.h  ssb_config_common.h
drivers/chips/bs21/board/memory_config/include/product/: product.h  product_evb_standard.h  product_hid_common.h  product_none.h  product_tag.h
drivers/chips/bs21/porting/: CMakeLists.txt
drivers/chips/bs21/porting/pinctrl/: CMakeLists.txt  pinctrl_porting.h  pinctrl_porting_bs21.c
drivers/chips/bs21/rom_info/: CMakeLists.txt
drivers/chips/bs2x/: CMakeLists.txt
drivers/chips/bs2x/arch/include/: patch.h
drivers/chips/bs2x/arch/src/: interrupt.c  interrupt_handler.c  mpu.c  oam_trace.c  patch.c
drivers/chips/bs2x/boot/: CMakeLists.txt
drivers/chips/bs2x/boot/boot_config/: boot_init.h
drivers/chips/bs2x/boot/boot_porting/: CMakeLists.txt
drivers/chips/bs2x/clocks/: clock_calibration.c  clock_calibration.h  clocks.c  clocks_switch.c  hal_32k_clock.c
drivers/chips/bs2x/include/: chip_core_irq.h  platform_core.h
drivers/chips/bs2x/interrupt/: interrupt_adapter.c  interrupt_os_adapter.c  vectors.c
drivers/chips/bs2x/liteos/: idle_config.c  memory_info.c  memory_info.h  os_dfx.c  os_dfx.h  tick_timer.c
drivers/chips/bs2x/pmu/: pmu.c  pmu_interrupt.c  pmu_ldo.c
drivers/chips/bs2x/porting/: CMakeLists.txt
drivers/chips/bs2x/porting/adc/: CMakeLists.txt  adc_porting.c  adc_porting.h
drivers/chips/bs2x/porting/dma/: CMakeLists.txt  dma_porting.c  dma_porting.h
drivers/chips/bs2x/porting/efuse/: CMakeLists.txt  efuse_porting.c
drivers/chips/bs2x/porting/flash/: CMakeLists.txt  flash_porting.c  flash_porting.h
drivers/chips/bs2x/porting/gpio/: CMakeLists.txt  gpio_porting.c  gpio_porting.h  ulp_gpio.c  ulp_gpio.h
drivers/chips/bs2x/porting/i2c/: CMakeLists.txt  i2c_porting.c  i2c_porting.h
drivers/chips/bs2x/porting/keyscan/: CMakeLists.txt  keyscan_porting.c  keyscan_porting.h
drivers/chips/bs2x/porting/pdm/: CMakeLists.txt  pdm_porting.c  pdm_porting.h
drivers/chips/bs2x/porting/pm/pm_clock/: CMakeLists.txt  pm_clock_porting.c  pm_clock_porting.h
drivers/chips/bs2x/porting/pm/pm_pmu/: CMakeLists.txt  pm_pmu_porting.c  pm_pmu_porting.h
drivers/chips/bs2x/porting/pmp/: CMakeLists.txt  pmp_porting.c
drivers/chips/bs2x/porting/qdec/: CMakeLists.txt  qdec_porting.c  qdec_porting.h
drivers/chips/bs2x/porting/reboot/: CMakeLists.txt  reboot_porting.c  reboot_porting.h
drivers/chips/bs2x/porting/rtc_unified/: CMakeLists.txt  rtc_porting.c  rtc_porting.h
drivers/chips/bs2x/porting/sec/: CMakeLists.txt  pal_sec_config_port.h
drivers/chips/bs2x/porting/security/trng/: CMakeLists.txt  trng_porting.c
drivers/chips/bs2x/porting/sfc/: CMakeLists.txt  flash_config_info.c  sfc_porting.c  sfc_porting.h
drivers/chips/bs2x/porting/sio/: CMakeLists.txt  sio_porting.c  sio_porting.h
drivers/chips/bs2x/porting/spi/: CMakeLists.txt  spi_porting.c  spi_porting.h
drivers/chips/bs2x/porting/systick/: CMakeLists.txt  systick_porting.c
drivers/chips/bs2x/porting/tcxo/: CMakeLists.txt  tcxo_porting.c
drivers/chips/bs2x/porting/timer/: CMakeLists.txt  timer_porting.c  timer_porting.h
drivers/chips/bs2x/porting/uart/: CMakeLists.txt  uart_porting.c  uart_porting.h
drivers/chips/bs2x/porting/usb_unified/: CMakeLists.txt  usb_porting.c  usb_porting.h
drivers/chips/bs2x/porting/usb_unified/include/soc/: usb.h
drivers/chips/bs2x/porting/usb_unified/phy/: usb2.0_phy_app.c  usb_phy.c
drivers/chips/bs2x/porting/usb_unified/stub/: usbd_hid.c  usbd_hid_mouse.c
drivers/chips/bs2x/porting/watchdog/: CMakeLists.txt  watchdog_porting.c  watchdog_porting.h
drivers/chips/bs2x/porting/xip/: CMakeLists.txt  xip_porting.c  xip_porting.h
drivers/drivers/: Kconfig
include/: CMakeLists.txt  common_def.h  errcode.h
include/driver/: CMakeLists.txt  can.h  eflash.h  mem_monitor.h  pwm.h  sfc.h  spi.h  timer.h  tsensor.h  uart.h
kernel/: Kconfig
kernel/liteos/: CMakeLists.txt  Kconfig
kernel/osal/: CMakeLists.txt
middleware/: Kconfig
middleware/chips/: CMakeLists.txt
middleware/chips/bs2x/pm/: CMakeLists.txt  pm_porting.c  pm_porting.h  ulp_rtc.c
middleware/chips/bs2x/pm/pm_dev/: CMakeLists.txt  pm_dev_porting.c
middleware/chips/bs2x/pm/pm_fsm/: CMakeLists.txt  pm_fsm_porting.c  pm_fsm_porting.h
middleware/chips/bs2x/pm/pm_sleep/: CMakeLists.txt  lowpower.S  pm_sleep_porting.c  pm_sleep_porting.h
middleware/chips/bs2x/pm/pm_sys/: CMakeLists.txt  pm_sys.c
middleware/chips/bs2x/pm/pm_veto/: CMakeLists.txt  pm_veto_porting.c  pm_veto_porting.h
middleware/services/: CMakeLists.txt
middleware/services/wifi_service/: CMakeLists.txt
middleware/services/wifi_service/service/: CMakeLists.txt  Makefile_liteos  service_event.h  service_wifi_api.h
middleware/services/wifi_service/service/mac_addr/: mac_addr.h
middleware/utils/: Kconfig
open_source/: CMakeLists.txt
protocol/: CMakeLists.txt  Kconfig
protocol/bt/controller/bgtp/: CMakeLists.txt  bs21.cmake
protocol/bt/host/: CMakeLists.txt
protocol/bt/host/bg_common/: CMakeLists.txt
protocol/bt/host/bt/: CMakeLists.txt  bt_app.cmake  bt_host.cmake
protocol/bt/host/bt/ahi/ahi_b/: ahi_b.cmake
protocol/bt/host/bt/sdk/: CMakeLists.txt
protocol/bt/host/gle/: Kconfig  bth_gle.cmake
protocol/cat1/: liteos.cmake  securec.cmake
protocol/cat1/lte/usim/: usim.cmake
protocol/glp/hiex_v300/: bs2x.cmake
test/: Kconfig
(+1625 files in other folders)
